--- a/frondend/vercel.json
+++ b/frondend/vercel.json
@@ -1,23 +1,5 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "public/**/*",
-      "use": "@vercel/static"
-    }
-  ],
-  "env": {
-    "MONGO_URI": "@mongo-uri",
-    "JWT_SECRET": "@jwt-secret"
-  },
-  "build": {
-    "env": {
-      "MONGO_URI": "@mongo-uri",
-      "JWT_SECRET": "@jwt-secret"
-    }
-  }
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
+  ]
 }
